app/operator-control/operator-control.less
.operator-controls {

    margin: 16px;

    button {
        min-width: 180px;
        margin-left: 8px;
        margin-right: 8px;
    }
}

.inhibited {
    transition: all 0.2s;
    background: #ffc107;
    color: black;
    width: 100%;
    opacity: 1;
    text-align: center;
}

/* Initial state when showing */
.inhibited.ng-hide-remove {
   opacity: 0;
}

/* Will transition towards this state */
.inhibited.ng-hide-add.ng-hide-add-active {
    opacity: 0;
}

/* Will transition towards this state */
.inhibited.ng-hide-remove.ng-hide-remove-active {
    opacity: 1;
}

.receptor-state-div {
    position: relative;
    background: #259b24;
    color: white;
    min-width: 140px;
    top: 0;
    min-height: 123px;
    margin: 6px;
}

.receptor-state-div-error {
    background: #FFC107 !important;
    color: black;
}

.receptor-state-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.flash-receptor-state {
    background: #259b24;
    transition: all 0.2s;
    min-width: 100%;
    text-align: center;
}

.flash-receptor-state.receptor-stop-state {
    width: 100%;
    background: #757575;
    color: white;
}

.flash-receptor-state.receptor-stow-state {
    background: #01579b;
}

